fix: GAP System health redesign (plus add alerts status)

--- a/frontend/src/app/components/overview/system-health/system-health.less
+++ b/frontend/src/app/components/overview/system-health/system-health.less
@@ -6,4 +6,8 @@ system-health {
     h3 {
         font-size: @font-size3;
     }
+
+    .description {
+        border-left: 1px solid @color15;;
+    }
 }
